# qfsort

./: CMakeLists.txt  README.md  USAGE.md  build.md
include/: cmdline.h  fileops.h  heapcmp.h  iocmd.h  iohandler.h  merge.h  mergeworker.h  symqfile.h  util.h  worksched.h
src/: CMakeLists.txt  iohandler.cpp  main.cpp  merge.cpp  mergeworker.cpp  symqfile.cpp  util.cpp
